fixed bugs, adapted dtos for deleted files, improved component reusability, added deleted page